--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     },
     "content_scripts": [
         {
-            "js": ["content.js"],
+            "js": [ "md5.min.js", "content.js" ],
             "matches": [
                 "https://kindroid.ai/*"
             ]
