--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "name": "KinLog",
     "description": "Allows the saving and downloading of Kindroid.ai chats.",
     "author": "john.horner@outlook.com",
+    "homepage_url": "https://github.com/JWHorner/KinLog",
     "version": "1.1",
     "version_name": "1.1",
     "icons": {
